Actualizacion 18/09/25